fix: fix issue where page header shows items behind it

--- a/src/App.css
+++ b/src/App.css
@@ -6,14 +6,13 @@
     font-weight: 500;
     color: rgb(182, 182, 182);
     background-color: rgb(19, 19, 19);
-    margin: 0 5rem; 
-    padding: .83em 0;
+    padding: .84em 5rem;
     transition-duration: .4s;
 }
 
 @media all and (max-width: 700px) {
     .page__header {
-        margin: 0 2rem;
+        padding: .84em 2rem;
         transition-duration: .4s;
     }
 }
